# ml_service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 666fb0e9fcbd_images_table_created.py  d778f2685e84_add_relationship_between_user_and_image.py  ff01ae5ccbca_user_table_creation.py
app/models/: transaction.py  user.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.js  App.jsx  index.css  main.jsx  react-query-client.js
frontend/src/api/: request.js
frontend/src/hooks/: useAuth.js
frontend/src/router/: Authenticator.jsx  ProtectedRoute.jsx  ProtectedRoutes.jsx  RedirectFromRoot.jsx  Router.js  Router.jsx
frontend/src/services/: auth.js  auth.service.js  axios-client.js  client.js  generate.js  wsManager.js
frontend/src/state/: index.js  user.js
frontend/src/utils/: getApiUrl.js  isProduction.js
nginx/: Dockerfile  nginx.conf
src/: Dockerfile  api.py  bot.py  config.py  database.py  fastapi_logger.py  main.py
src/api/: app.py  users.py
src/app/: app.py  db.py  models.py
src/app/api/: users.py
src/app/services/: transaction_service.py  user_service.py  video_service.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py  user_db.py  users.py
src/balance/: models.py  schemas.py
src/celery/: tasks.py
src/celery/generate_and_save_image/: generate_image.py  save_to_db.py  (+1 more)
src/celery_worker/: celery_logger.py  tasks.py
src/database/: db.py
src/hugging_face/: client.py
src/image_generation/: connection_manager.py  generate_image.py  models.py  prompt_handler.py  router.py  schemas.py  upload_image.py  websocket.py
src/rabbit_mq/: connection.py  connection_params.py  consumer.py  publish_message.py  publisher.py  worker.py
src/services/: cloudinary.py  hugging_face.py
src/telegram/: bot.py  send_message.py
src/utils/: get_user_from_cookie.py
tests/: test_api.py
(+12 files in other folders)
