[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "generating_images_project"
authors = ["Dmitrii Martynov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
sqlalchemy = "2.0.29"
uvicorn = "0.29.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
psycopg2-binary = "2.9.9"
cloudinary = "1.39.1"
pika = "1.3.2"
pillow = "10.3.0"
pydantic = "2.6.4"
python-telegram-bot = "20.7"
requests = "2.31.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"



[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
pytest = "^8.1.1"
httpx = "0.25.2"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
api = "python -m src.api"
bot = "python -m src.telegram.bot"
worker = "python -m src.rabbit_mq.worker"
frontend = "cd frontend && yarn start"
start = ["api", "bot", "worker"]
test = "python -m pytest tests/"